fix: horizontal scroll

--- a/react-form/src/components/Cards/Card/Card.module.scss
+++ b/react-form/src/components/Cards/Card/Card.module.scss
@@ -39,7 +39,7 @@
       height: 50px;
       transform: skew(-20deg);
       z-index: -1;
-      box-shadow: -20px 20px 8px rgba(0, 0, 0, 0.2);
+      box-shadow: -20px 20px 8px #00000033;
     }
   }
   &ImageBlock{
