--- a/react-form/src/components/Form/Form.module.scss
+++ b/react-form/src/components/Form/Form.module.scss
@@ -1,13 +1,13 @@
 .formBlock {
   text-align: start;
   max-width: 400px;
-  width: 100%;
+  width: 90%;
   color: #ffffff;
   font-size: 19px;
   font-weight: bold;
   margin: 0 auto 40px;
   min-height: 500px;
-  background: rgb(49, 117, 143);
+  background: #31758FFF;
   border-radius: 25px;
   border: 2px solid #ff0000;
   padding: 15px;
@@ -15,7 +15,7 @@
 
   &UseForm {
     max-width: 300px;
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     gap: 9px;
@@ -27,12 +27,20 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
+    @media (max-width: 768px) {
+      width: 70%;
+    }
   }
 
   &Select {
     overflow: hidden;
     max-width: 300px;
-    overflow-y: auto;
+    width: 80%;
+    & option {
+      max-width: 50%;
+      color: #020267;
+      overflow: hidden;
+    }
   }
 
   &ErrorText {
@@ -49,9 +57,7 @@
   }
 
   &File {
-    opacity: 0;
-    visibility: hidden;
-    position: absolute;
+   display: none;
   }
 
 
@@ -81,10 +87,10 @@
     }
 
     &:disabled {
-      border-color: rgba(155, 38, 162, 0.55);
+      border-color: #9B26A28C;
       box-shadow: 0 0 2px green;
-      color: rgba(0, 0, 255, 0.53);
-      background-color: rgba(255, 248, 0, 0.59);
+      color: #0000FF87;
+      background-color: #FFF80096;
       cursor: default;
     }
   }
@@ -96,9 +102,11 @@
     padding: 5px;
     white-space: pre-line;
     margin-bottom: 30px;
+    font-weight: 1.6;
 
     & input {
       display: block;
+      margin-left: 5px;
     }
 
     & span {
@@ -110,7 +118,7 @@
 
   &LabelFileButton {
     display: block;
-    width: 100%;
+    width: 80%;
     max-width: 150px;
     padding: 10px 0;
     background: #4fe7c5;
@@ -138,17 +146,18 @@
   justify-content: space-between;
   height: 60px;
   margin-bottom: 20px;
+  gap: 5px;
 }
 
 .imageBlock {
-  width: 100px;
+  max-width: 100px;
   max-height: 80px;
   overflow: hidden;
   border-radius: 15px;
 }
 
 .imagePrev {
-  width: 100%;
+  width: 90%;
   border-radius: 10px;
   object-fit: cover;
 }
